# Pet-Automatic-Feeder

./: README.md  Requirements.md
Circuit_Schematic/: Embeded_System.xlsx  Readme.md
Circuit_Schematic/Embeded_System/: Embeded_System.OutJob  Embeded_System.PrjPcb  Embeded_System.PrjPcbStructure  PetAutomaticFeeder.SchDoc  Schlib1.SchLib
Circuit_Schematic/Embeded_System/__Previews/: EmbededSystemPreview  PetAutomaticFeeder.SchDocPreview  Sheet1.SchDocPreview
Demo/: CMakeLists.txt  Readme.md  main.cpp
Demo/include/: AddFood.h  Blue.h  BlueSendReceive.h  HumanSensor.h  Pump.h  SR04.h  Servo.h  foodWaterDetect.h  globalVar.h
Demo/src/: AddFood.cpp  Blue.cpp  BlueSendReceive.cpp  HumanSensor.cpp  Pump.cpp  SR04.cpp  Servo.cpp  foodWaterDetect.cpp
SR04/: CMakeLists.txt  hcsr04.cpp  hcsr04.h  main.cpp
SR04/include/: TimeUtils.h  hcsr04.h
SR04/src/: TimeUtils.cpp
Single Device Unit Test/: Readme.md
Single Device Unit Test/Blue/: Blue.cpp  CMakeLists.txt  Readme.md  main.cpp
Single Device Unit Test/Blue/include/: Blue.h
Single Device Unit Test/Blue/src/: Blue.cpp
Single Device Unit Test/HC_SR04/: CMakeLists.txt  Readme.md  main.cpp
Single Device Unit Test/HC_SR04/include/: SR04.h
Single Device Unit Test/HC_SR04/src/: SR04.cpp
Single Device Unit Test/Human_Sensor/: CMakeLists.txt  main.cpp
Single Device Unit Test/Human_Sensor/include/: HumanSensor.h
Single Device Unit Test/Human_Sensor/src/: HumanSensor.cpp
Single Device Unit Test/Human_Sensor_2/: Blue.cpp  Readme.md
Single Device Unit Test/Pump/: CMakeLists.txt  main.cpp
Single Device Unit Test/Pump/include/: Pump.h
Single Device Unit Test/Pump/src/: Pump.cpp
Single Device Unit Test/SR04/: Readme.md
Single Device Unit Test/SR04/src/: hcsr04.cpp
Single Device Unit Test/Serial/: Blue.cpp  CMakeLists.txt  Readme.md
Single Device Unit Test/Servo/: CMakeLists.txt  Readme.md  main.cpp
Single Device Unit Test/pump/: CMakeLists.txt  Readme.md  Reamme.md  main.cpp
Thread/: Readme.md
Thread/Thread_1/: main  main.cpp
Thread/Thread_3/: CMakeLists.txt  Readme.md  callbacks.h  main.cpp  scanf.cpp  scanf.h
Thread/mousecallback-main/: CMakeLists.txt  Makefile  README.md  main.cpp  mouse.cpp  mouse.h
Thread_3/: CMakeLists.txt  callbacks.h  scanf.h
hx711/: CMakeLists.txt  main.cpp
hx711/include/: hx711.h
hx711/src/: hx711.cpp
mousecallback-main/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  mouse.cpp  mouse.h
petFeeder/: .flutter-plugins-dependencies  README.md  pubspec.yaml
petFeeder/.dart_tool/: package_config.json
petFeeder/lib/: main.dart
petFeeder/linux/: CMakeLists.txt  my_application.cc
petFeeder/test/: widget_test.dart
petFeeder/web/: index.html
petFeeder/windows/: CMakeLists.txt
petFeeder2.0/: .flutter-plugins-dependencies
petFeeder2.0/lib/: main.dart
petFeeder2.0/web/: manifest.json
petFeeder2.1/: .flutter-plugins  .flutter-plugins-dependencies
petFeeder2.1/lib/: main.dart
petFeeder3.0/: .flutter-plugins-dependencies
petFeeder3.0/.dart_tool/: package_config_subset
pump_control/: CMakeLists.txt  main.cpp
pump_control/src/: pump_control.cpp
sr04/: CMakeLists.txt  main.cpp
sr04/include/: SR04.h
线程测试/SR04/: CMakeLists.txt  main.cpp
线程测试/SR04/include/: AddWater.h  SR04.h  pump_control.h
线程测试/SR04/src/: AddWater.cpp  SR04.cpp  pump_control.cpp
(+111 files in other folders)
